--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -36,5 +36,9 @@
         <members>*</members>
         <name>CustomMetadata</name>
     </types>
+    <types>
+        <members>*</members>
+        <name>CustomObject</name>
+    </types>
     <version>52.0</version>
 </Package>
